[package]
name = "moneda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.6.1"
hex = "0.4.3"
hmac = "0.12.1"
k256 = { version = "0.13.4", features = ["arithmetic", "ecdsa"] }
num-bigint = "0.4.4"
num-traits = "0.2.16"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
